--- a/src/MK.Accountancy.Blazor/Pages/BankAccounts/BankAccountMoventListPage.razor
+++ b/src/MK.Accountancy.Blazor/Pages/BankAccounts/BankAccountMoventListPage.razor
@@ -12,7 +12,7 @@
 
     <ListPageContext>
         <DevDataGrid DataGridService="Service"
-                     HorizontalScrollBarMode="ScrollBarMode.Visible">
+                     HorizontalScrollBarMode="ScrollBarMode.Auto">
             <HeaderTemplate>
                 <DevListPageToolBar CommonService="Service"
                                     DataGridService="Service"
