--- a/src/MK.Accountancy.Blazor/Pages/Stores/StoreListPage.razor
+++ b/src/MK.Accountancy.Blazor/Pages/Stores/StoreListPage.razor
@@ -5,6 +5,7 @@
 
 @inject StoreAppService CrudService
 @inject StoreService Service
+@inject StoreMoventService StoreMoventService
 
 <DevListPageLayout DataGridService="Service"
                    ListPageService="Service"
@@ -29,7 +30,13 @@
                                     NewButtonVisible="true"
                                     UpdateButtonClick="async ()=> await BeforeUpdateAsync()"
                                     UpdateButtonEnabled="Service.ListDataSource.Count > 0"
-                                    UpdateButtonVisible="true">
+                                    UpdateButtonVisible="true"
+                                    ReserveButtonBeginGroup="true"
+                                    ReserveButtonClick="()=>StoreMoventService.BeforeShowPopupListPage(Service.SelectedItem.Id)"
+                                    ReserveButtonEnabled="Service.ListDataSource.Count > 0"
+                                    ReserveButtonText="@L["CardTransactions"]"
+                                    ReserveButtonTooltip="@L["ShowTransactionsForThisCard"]"
+                                    ReserveButtonVisible="true">
 
                 </DevListPageToolBar>
             </HeaderTemplate>
@@ -69,6 +76,22 @@
     </EditPageContent>
 
 </DevListPageLayout>
+
+@if (StoreMoventService.IsPopupListPage)
+{
+    Service.SelectFirstDataRow = false;
+    <DevPopupListPageLayout DataGridService="Service"
+                        CancelButtonText="@L["Close"]"
+                        Caption="@($"{L["StoreTransactions"]} ({Service.SelectedItem.Code} / {Service.SelectedItem.Name})")"
+                        Closed="StoreMoventService.HideListPage"
+                        SelectButtonVisible="false"
+                        Visible="true"
+                        Width="1100px">
+        <ListPageContent>
+            <StoreMoventListPage />
+        </ListPageContent>
+    </DevPopupListPageLayout>
+}
 
 @code {
     protected override void OnInitialized()
