--- a/src/MK.Blazor.Core/_Imports.razor
+++ b/src/MK.Blazor.Core/_Imports.razor
@@ -10,3 +10,6 @@
 @using MK.Blazor.Core.Components.Commons.Loadings;
 @using MK.Blazor.Core.Models
 @using MK.Blazor.Core.Services
+@using MK.Blazor.Core.Components.DevComp.Layouts
+@using MK.Blazor.Core.Components.DevComp.DataEditors
+@using static MK.Blazor.Core.Helpers.Functions
