--- a/src/MK.Blazor.Core/_Imports.razor
+++ b/src/MK.Blazor.Core/_Imports.razor
@@ -4,6 +4,9 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using DevExpress.Blazor
 @using DevExpress.Blazor.Base
+@using DevExpress.Blazor.Reporting
+@using DevExpress.XtraReports.UI
+@using DevExpress.DataAccess.ObjectBinding
 @using MK.Blazor.Core.Components.DevComp.DataEditors.Base
 @using MK.Blazor.Core.Components.DevComp.DataViewers.Base
 @using MK.Blazor.Core.Components.DevComp.Utilities;
