--- a/src/MK.Blazor.Core/_Imports.razor
+++ b/src/MK.Blazor.Core/_Imports.razor
@@ -1,4 +1,5 @@
 ﻿@using System.Globalization
+@using System.Reflection
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.Extensions.Localization
 @using Microsoft.AspNetCore.Components.Forms
