--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -53,6 +53,7 @@
 @using MK.Accountancy.Receipts
 @using MK.Accountancy.PaymentDocuments
 @using MK.Accountancy.Blazor.Pages.PaymentDocuments
+@using MK.Blazor.Core.Components.Commons.Loadings
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
@@ -61,3 +62,5 @@
 @using Volo.Abp.Users
 @using Volo.Abp.AspNetCore.Components.Messages
 @using DevExpress.Blazor
+@using Microsoft.Extensions.Options
+@using Volo.Abp.AspNetCore.Components.Web.Theming.Routing
