--- a/src/MK.Accountancy.Blazor/Pages/_Host.cshtml
+++ b/src/MK.Accountancy.Blazor/Pages/_Host.cshtml
@@ -1,6 +1,9 @@
 ﻿@page "/"
 @namespace MK.Accountancy.Blazor.Pages
 @using System.Globalization
+@using MK.Accountancy.Localization
+@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.Extensions.Localization
 @using Volo.Abp.AspNetCore.Components.Server.BasicTheme.Bundling
 @using Volo.Abp.Localization
 @{
@@ -8,18 +11,20 @@
     var rtl = CultureHelper.IsRtl ? "rtl" : string.Empty;
 }
 
+@inject IStringLocalizer<AccountancyResource> L
+
 <!DOCTYPE html>
 <html lang="@CultureInfo.CurrentCulture.Name" dir="@rtl">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MK.Accountancy.Blazor</title>
+    <title>@($"MK {L["Pre-Accounting"]}")</title>
     <base href="~/" />
-
+    <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered"/>
     <abp-style-bundle name="@BlazorBasicThemeBundles.Styles.Global" />
 </head>
 <body class="abp-application-layout bg-light @rtl">
-    <component type="typeof(App)" render-mode="Server" />
+    <component type="typeof(App)" render-mode="ServerPrerendered" />
 
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
