--- a/src/MK.Accountancy.Blazor/Shared/MainMenu.razor
+++ b/src/MK.Accountancy.Blazor/Shared/MainMenu.razor
@@ -165,6 +165,7 @@
                         @(((SelectOrganizationParameterDto)AppService.CompanyParameter).TermName)
                     </TextTemplate>
                 </DxMenuItem>
+                <LoginDisplay />
                 </Items>
         </DxMenu>
     </div>
