--- a/src/MK.Blazor.Core/Components/Commons/Loadings/CircleLoadingChildContent.razor
+++ b/src/MK.Blazor.Core/Components/Commons/Loadings/CircleLoadingChildContent.razor
@@ -4,7 +4,7 @@
 }
 else
 {
-    <CircleLoading Caption="@Caption", Text="@Text" />
+    <CircleLoading Caption="@Caption" Text="@Text" />
 }
 
 @code {
