--- a/src/MK.Accountancy.Blazor/Pages/Banks/BankListPage.razor
+++ b/src/MK.Accountancy.Blazor/Pages/Banks/BankListPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/bankcards"
+@attribute [Authorize(AccountancyPermissions.Bank_.Default)]
 
 @inherits BaseListPage<SelectBankDto,BankListDto,BankListParameterDto,
                        CreateBankDto,UpdateBankDto,CodeParameterDto>
