--- a/src/MK.Accountancy.Blazor/Pages/Expenses/ExpenseListPage.razor
+++ b/src/MK.Accountancy.Blazor/Pages/Expenses/ExpenseListPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/expensecards"
+@attribute [Authorize(AccountancyPermissions.Expense.Default)]
 
 @inherits BaseListPage<SelectExpenseDto,ListExpenseDto,ExpenseListParameterDto,
                        CreateExpenseDto,UpdateExpenseDto,CodeParameterDto>
