--- a/src/MK.Accountancy.Blazor/Pages/Safes/SafeListPage.razor
+++ b/src/MK.Accountancy.Blazor/Pages/Safes/SafeListPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/cashcards"
+@attribute [Authorize(AccountancyPermissions.Safe.Default)]
 
 @inherits BaseListPage<SelectSafeDto, ListSafeDto, SafeListParameterDto, CreateSafeDto, UpdateSafeDto, SafeCodeParameterDto>
 
