--- a/src/MK.Accountancy.Blazor/Shared/MainMenu.razor
+++ b/src/MK.Accountancy.Blazor/Shared/MainMenu.razor
@@ -165,7 +165,7 @@
                         @(((SelectOrganizationParameterDto)AppService.CompanyParameter).TermName)
                     </TextTemplate>
                 </DxMenuItem>
-                <LoginDisplay />
+                <LoginDisplayMenu />
                 </Items>
         </DxMenu>
     </div>
