--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -64,3 +64,4 @@
 @using DevExpress.Blazor
 @using Microsoft.Extensions.Options
 @using Volo.Abp.AspNetCore.Components.Web.Theming.Routing
+@using MK.Accountancy.Permissions
