--- a/src/MK.Accountancy.Blazor/Pages/BankDepartments/BankDepartmentListPage.razor
+++ b/src/MK.Accountancy.Blazor/Pages/BankDepartments/BankDepartmentListPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/bankdepartments"
+@attribute [Authorize(AccountancyPermissions.BankDepartment.Default)]
 
 @inherits BaseListPage<SelectBankDepartmentDto,ListBankDepartmentDto,BankDepartmentListParameterDto,
                        CreateBankDepartmentDto,UpdateBankDepartmentDto,BankDepartmentCodeParameterDto>
