--- a/src/MK.Accountancy.Blazor/Pages/Receipts/BankTransactionReceiptListPage.razor
+++ b/src/MK.Accountancy.Blazor/Pages/Receipts/BankTransactionReceiptListPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/banktransactionreceiptcards"
+@attribute [Authorize(AccountancyPermissions.Receipt.Default)]
 
 @inherits BaseListPage<SelectReceiptDto,ListReceiptDto,ReceiptListParameterDto,
                        CreateReceiptDto,UpdateReceiptDto,ReceiptNumberParameterDto>
