--- a/src/MK.Accountancy.Blazor/Pages/Departments/DepartmentListPage.razor
+++ b/src/MK.Accountancy.Blazor/Pages/Departments/DepartmentListPage.razor
@@ -58,5 +58,10 @@
     {
         BaseCrudAppService = CrudService;
         BaseService = Service;
+        //
+        DefaultPolicy = AccountancyPermissions.Department.Default;
+        CreatePolicy = AccountancyPermissions.Department.Create;
+        UpdatePolicy = AccountancyPermissions.Department.Update;
+        DeletePolicy = AccountancyPermissions.Department.Delete;
     }
 }
