--- a/src/MK.Accountancy.Blazor/Pages/PaymentDocuments/PaymentDocumentListPage.razor
+++ b/src/MK.Accountancy.Blazor/Pages/PaymentDocuments/PaymentDocumentListPage.razor
@@ -96,5 +96,7 @@
     {
         BaseCrudAppService = CrudService;
         BaseService = Service;
+        //
+        DefaultPolicy = AccountancyPermissions.PaymentDocument.Default;
     }
 }
