--- a/src/MK.Accountancy.Blazor/Pages/Receipts/BankTransactionReceiptListPage.razor
+++ b/src/MK.Accountancy.Blazor/Pages/Receipts/BankTransactionReceiptListPage.razor
@@ -110,5 +110,10 @@
         Service.ReceiptType = ReceiptType.BankOperation;
         BaseCrudAppService = CrudService;
         BaseService = Service;
+        //
+        DefaultPolicy = AccountancyPermissions.Receipt.Default;
+        CreatePolicy = AccountancyPermissions.Receipt.Create;
+        UpdatePolicy = AccountancyPermissions.Receipt.Update;
+        DeletePolicy = AccountancyPermissions.Receipt.Delete;
     }
 }
