--- a/src/MK.Accountancy.Blazor/Pages/ServicePages/ServiceListPage.razor
+++ b/src/MK.Accountancy.Blazor/Pages/ServicePages/ServiceListPage.razor
@@ -113,5 +113,11 @@
     {
         BaseCrudAppService = CrudService;
         BaseService = Service;
+        //
+        DefaultPolicy = AccountancyPermissions.Service.Default;
+        CreatePolicy = AccountancyPermissions.Service.Create;
+        UpdatePolicy = AccountancyPermissions.Service.Update;
+        DeletePolicy = AccountancyPermissions.Service.Delete;
+        ReservePolicy = AccountancyPermissions.Service.Transaction;
     }
 }
