--- a/src/MK.Accountancy.Blazor/Pages/Units/UnitListPage.razor
+++ b/src/MK.Accountancy.Blazor/Pages/Units/UnitListPage.razor
@@ -64,5 +64,10 @@
     {
         BaseCrudAppService = CrudService;
         BaseService = Service;
+        //
+        DefaultPolicy = AccountancyPermissions.Unit.Default;
+        CreatePolicy = AccountancyPermissions.Unit.Create;
+        UpdatePolicy = AccountancyPermissions.Unit.Update;
+        DeletePolicy = AccountancyPermissions.Unit.Delete;
     }
 }
