--- a/src/MK.Accountancy.Blazor/Pages/Receipts/CollectionReceiptListPage.razor
+++ b/src/MK.Accountancy.Blazor/Pages/Receipts/CollectionReceiptListPage.razor
@@ -153,5 +153,11 @@
         Service.ReceiptType = ReceiptType.Collection;
         BaseCrudAppService = CrudService;
         BaseService = Service;
+        //
+        DefaultPolicy = AccountancyPermissions.Receipt.Default;
+        CreatePolicy = AccountancyPermissions.Receipt.Create;
+        UpdatePolicy = AccountancyPermissions.Receipt.Update;
+        DeletePolicy = AccountancyPermissions.Receipt.Delete;
+        PrintPolicy = AccountancyPermissions.Receipt.Print;
     }
 }
