--- a/src/MK.Accountancy.Blazor/Pages/Receipts/PaymentReceiptListPage.razor
+++ b/src/MK.Accountancy.Blazor/Pages/Receipts/PaymentReceiptListPage.razor
@@ -124,5 +124,10 @@
         Service.ReceiptType = ReceiptType.Payment;
         BaseCrudAppService = CrudService;
         BaseService = Service;
+        //
+        DefaultPolicy = AccountancyPermissions.Receipt.Default;
+        CreatePolicy = AccountancyPermissions.Receipt.Create;
+        UpdatePolicy = AccountancyPermissions.Receipt.Update;
+        DeletePolicy = AccountancyPermissions.Receipt.Delete;
     }
 }
