--- a/src/MK.Accountancy.Blazor/Pages/Stores/StoreListPage.razor
+++ b/src/MK.Accountancy.Blazor/Pages/Stores/StoreListPage.razor
@@ -99,5 +99,11 @@
     {
         BaseCrudAppService = CrudService;
         BaseService = Service;
+        //
+        DefaultPolicy = AccountancyPermissions.Store.Default;
+        CreatePolicy = AccountancyPermissions.Store.Create;
+        UpdatePolicy = AccountancyPermissions.Store.Update;
+        DeletePolicy = AccountancyPermissions.Store.Delete;
+        ReservePolicy = AccountancyPermissions.Store.Transaction;
     }
 }
