--- a/src/MK.Accountancy.Blazor/Pages/_Host.cshtml
+++ b/src/MK.Accountancy.Blazor/Pages/_Host.cshtml
@@ -24,7 +24,12 @@
     <abp-style-bundle name="@BlazorBasicThemeBundles.Styles.Global" />
 </head>
 <body class="abp-application-layout bg-light @rtl">
-    <component type="typeof(App)" render-mode="ServerPrerendered" />
+    <environment include="Staging,Production">
+        <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+    </environment>
+    <environment include="Development">
+        <component type="typeof(HeadOutlet)" render-mode="Server" />
+    </environment>
 
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
